--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Resume - Kevin Renois</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -44,8 +44,8 @@
                         <span class="text-primary">Renois</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (254) 733-8319 ·
-                        <a href="mailto:name@email.com">kevinrenois@gmail.com</a>
+                        Texas, USA · (254) 733-8319 ·
+                        <a href="mailto:kevinrenois@gmail.com">kevinrenois@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
@@ -216,6 +216,15 @@
                     </ul>
                 </div>
             </section>
+            <hr class="m-0" />
+             <!-- Resume-->
+             <section class="resume-section" id="resume">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Resume</h2>
+                    <ul class="fa-ul mb-0">
+                        <div class="social-icons">
+                            <a class="social-icon" href=
+                        </div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
