--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Resume - Kevin Renois</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/profile.jpg" />
+        <link rel="icon" type="image/x-icon" href="assets/img/profile copy.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- devicon icons -->
