--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Kevin Renois</title>
+        <title>Kevin Renois</title>
         <link rel="icon" type="image/x-icon" href="assets/img/profile copy.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -49,9 +49,9 @@
                         Texas, USA · (254) 733-8319 ·
                         <a href="mailto:kevinrenois@gmail.com">kevinrenois@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am a data-driven problem solver I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/kevinrenois/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -128,17 +128,13 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="devicon-postgresql-plain"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-microsoft"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-slack"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+                        <li div title= "Python" class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li div title= "PostgreSQL" class="list-inline-item"><i class="devicon-postgresql-plain"></i></li>
+                        <li div title= "Microsoft Suite" class="list-inline-item"><i class="fab fa-microsoft"></i></li>
+                        <li div title= "GitHub" class="list-inline-item"><i class="fab fa-github"></i></li>
+                        <li div title= "Virtual Studio" class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
+                        <li div title= "Slack" class="list-inline-item"><i class="fab fa-slack"></i></li>
+                        <li div title= "Amazon Web Services" class="list-inline-item"><i class="devicon-amazonwebservices-original"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
@@ -225,7 +221,7 @@
                     <h2 class="mb-5">Resume</h2>
                     <ul class="fa-ul mb-0">
                         <div class="social-icons">
-                            <a class="social-icon" href=
+                            <a class="social-icon" href="assets/documents/Kevin_Renois_Resume.pdf" target="_blank"><i class="far fa-file-pdf"></i></a>
                         </div>
         </div>
         <!-- Bootstrap core JS-->
