--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Resume</a></li>
                 </ul>
             </div>
         </nav>
@@ -49,12 +50,11 @@
                         Texas, USA · (254) 733-8319 ·
                         <a href="mailto:kevinrenois@gmail.com">kevinrenois@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a data-driven problem solver I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am a data-driven problem solver with a background in non-profit and economic development. I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/kevinrenois/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://github.com/kevinrenois"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://medium.com/@kevinrenois"><i class="fab fa-medium-m"></i></a>
                     </div>
                 </div>
             </section>
