--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             </div><br>
                             <h3 class="mb-0">Interaction of COVID-19 Cases and Forest Fires</h3><br>
 
-                            <img class="img-resposive" src="assets/img/mika-baumeister-uz_T7h8ds04-unsplash.jpg" align="right">
+                            <img class="img-fluid" src="assets/img/mika-baumeister-uz_T7h8ds04-unsplash.jpg" align="right">
 
                             <div>COVID-19 brought the world to a stand still. To aid in the race for a vaccine and better understanding of the virus, 
                                 the Semantic Scholar team at the Allen Institute for AI created CORD-19, the COVID Open Research Dataset, in partnership
