--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
                     <ul class="list-inline dev-icons">
                         <li div title= "Python" class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li div title= "PostgreSQL" class="list-inline-item"><i class="devicon-postgresql-plain"></i></li>
-                        <li div title= "Microsoft Suite" class="list-inline-item"><i class="fab fa-microsoft"></i></li>
                         <li div title= "GitHub" class="list-inline-item"><i class="fab fa-github"></i></li>
                         <li div title= "Virtual Studio" class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
-                        <li div title= "Slack" class="list-inline-item"><i class="fab fa-slack"></i></li>
                         <li div title= "Amazon Web Services" class="list-inline-item"><i class="devicon-amazonwebservices-original"></i></li>
+                        <li div title= "Microsoft Suite" class="list-inline-item"><i class="fab fa-microsoft"></i></li>
+                        <li div title= "Slack" class="list-inline-item"><i class="fab fa-slack"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Competencies</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Machine Learing
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Data Processing
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Data Visualization
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -200,7 +200,7 @@
                             
                             <h3 class="mb-0">Natural Language Processing Classifer</h3><br>
 
-                            <img class="img-resposive" src="assets/img/drinks.png" align="right">
+                            <img class="img-fluid" src="assets/img/patrick-tomasso-Oaqk7qqNh_c-unsplash.jpg" align="right">
                             <div>I collected 100,000 comments using webscraping and the reddit API from both the cocktail and wine subreddit categories. 
                                 The text was cleaned by removing HTML, non-letters, all words lowercased and tokenized, stopwords removed, and lemmatized. Then 
                                 all words were turned into numerical values using CountVectorizer and TFIDF. Several classification models were trained to best classify unseen
