--- a/index.html
+++ b/index.html
@@ -141,10 +141,6 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Machine Learing
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Data Processing
                         </li>
                         <li>
@@ -153,7 +149,23 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Machine Learing
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Deep Learing
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Natural Language Processing
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Business Analytics
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Project Management
                         </li>
                     </ul>
                 </div>
@@ -169,31 +181,24 @@
                     
                             <img class="img-fluid" src="assets/img/charles-deluvio-PzysYNvUg0o-unsplash.jpg" align="right">
             
-                            <div>The world of wine can be confusing to navigate. Every country has different 
-                                rules and regulations for labeling and selling wines. A wine label itself 
-                                can be difficult to read. If someone knows one or two words about a flavor profile, 
-                                producer, grape, vineyard site, region, appellation how do they find that wine or 
-                                other similar ones? I created a wine recommender that will take text and recommend 
-                                wines that are available to purchase with a link to the site so they can buy and explore.<br>
-                                I scraped 12,000 wines from Astor Wines, Chambers Street, Twenty Twenty Wines, and Wine.com to 
-                                give a broad selection of wine for the user to pick from. Gensim FastText was utilized to take
-                                user input and find words that are the most similiar to the segment and return wines that match 
-                                the description. Direct links to selected wine is provided and each site has their own "similar wines" 
-                                function to continue expanding user selection. <br>To see this project, 
+                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                sunt in culpa qui officia deserunt mollit anim id est laborum. <br>To see this project, 
                                 <a href="#" target="_blank"><strong>click here</strong></a>
                             </div><br>
                             <h3 class="mb-0">Interaction of COVID-19 Cases and Forest Fires</h3><br>
 
                             <img class="img-fluid" src="assets/img/mika-baumeister-uz_T7h8ds04-unsplash.jpg" align="right">
 
-                            <div>COVID-19 brought the world to a stand still. To aid in the race for a vaccine and better understanding of the virus, 
-                                the Semantic Scholar team at the Allen Institute for AI created CORD-19, the COVID Open Research Dataset, in partnership
-                                with Georgetown University, Microsoft Research, Amazon Web Services, the Chan Zuckerberg Initiative, the National 
-                                Institutes of Health, and the White House created a database of over 63,000 scientific papers regarding coronaviruses
-                                and other similar outbreaks from 1957 to today.<br>
-                                How would a researcher find what they are looking for quickly with so much data? In collaberation with FEMA, Clay Carson, 
-                                and Cynthia Chiang, we utilized both Doc2Vec and LDA within the Gensim library to search by keyword or topic. This is 
-                                intened to expidite the research process in the race for a vaccine. <br>
+                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                sunt in culpa qui officia deserunt mollit anim id est laborum. <br>
                                 To see this project, 
                                 <a href="#" target="_blank"><strong>click here</strong></a>
                             </div><br>
@@ -201,12 +206,10 @@
                             <h3 class="mb-0">Natural Language Processing Classifer</h3><br>
 
                             <img class="img-fluid" src="assets/img/patrick-tomasso-Oaqk7qqNh_c-unsplash.jpg" align="right">
-                            <div>I collected 100,000 comments using webscraping and the reddit API from both the cocktail and wine subreddit categories. 
-                                The text was cleaned by removing HTML, non-letters, all words lowercased and tokenized, stopwords removed, and lemmatized. Then 
-                                all words were turned into numerical values using CountVectorizer and TFIDF. Several classification models were trained to best classify unseen
-                                text into the appropriate subreddit category. At the end of the day, the combination of CountVectorizer and Naive Bayes Classifer
-                                was the best combination at 86% accuracy. As a fun experiment on the model, I had friends submit text to me about wine or cocktails 
-                                and the model correctly classified 14 of 15 lines of text. 
+                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                sunt in culpa qui officia deserunt mollit anim id est laborum.
                                 <br>
                                 To see this project, 
                                 <a href="#" target="_blank"><strong>click here</strong></a>
