--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                         <li div title= "Virtual Studio" class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
                         <li div title= "Amazon Web Services" class="list-inline-item"><i class="devicon-amazonwebservices-original"></i></li>
                         <li div title= "Microsoft Suite" class="list-inline-item"><i class="fab fa-microsoft"></i></li>
+                        <li div title= "Trello" class="list-inline-item"><i class="fab fa-trello"></i></li>
                         <li div title= "Slack" class="list-inline-item"><i class="fab fa-slack"></i></li>
                     </ul>
                     <div class="subheading mb-3">Competencies</div>
@@ -127,9 +128,9 @@
                                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
                                 dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
                                 sunt in culpa qui officia deserunt mollit anim id est laborum. <br>To see this project, 
-                                <a href="#" target="_blank"><strong>click here</strong></a>
+                                <a href="https://github.com/kevinrenois/Detecting-Malicious-URLS-using-Python-and-SQL" target="_blank"><strong>click here</strong></a>
                             </div><br>
-                            <h3 class="mb-0">Interaction of COVID-19 Cases and Forest Fires</h3><br>
+                            <h3 class="mb-0">Mapping The Interaction of COVID-19 Cases and Wildfires Nationwide</h3><br>
 
                             <img class="img-thumbnail" src="assets/img/mika-baumeister-uz_T7h8ds04-unsplash.jpg" align="top">
 
@@ -138,10 +139,10 @@
                                 dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
                                 sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
                                 To see this project, 
-                                <a href="#" target="_blank"><strong>click here</strong></a>
+                                <a href="https://github.com/kevinrenois/COVID19-Natural-Disasters" target="_blank"><strong>click here</strong></a>
                             </div><br>
                             
-                            <h3 class="mb-0">Natural Language Processing Classifer</h3><br>
+                            <h3 class="mb-0">Natural Language Processing Classification Model</h3><br>
 
                             <img class="img-thumbnail" src="assets/img/patrick-tomasso-Oaqk7qqNh_c-unsplash.jpg" align="top">
                             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -150,7 +151,7 @@
                                 sunt in culpa qui officia deserunt mollit anim id est laborum.
                                 <br>
                                 To see this project, 
-                                <a href="#" target="_blank"><strong>click here</strong></a>
+                                <a href="https://github.com/kevinrenois/Subreddit-Classification" target="_blank"><strong>click here</strong></a>
                             </div>
                             <br>
                         </div>
