--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         Texas, USA · (254) 733-8319 ·
                         <a href="mailto:kevinrenois@gmail.com">kevinrenois@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a data-driven problem solver with a background in non-profit and economic development. 
-                        I am passionate about using tech innovation to increase business effectiveness and make communities
+                    <p class="lead mb-5">I am a data-driven problem solver with a background in non-profit economic development. 
+                        I am passionate about using innovative technologies to increase business effectiveness and make communities
                         more connected and prosperous. I have experience in working with collaborative teams to take 
                         projects and initiatives from ideation to execution and I have recently strengthened my skill-set with robust data science competencies.</p>
                     <div class="social-icons">
@@ -165,8 +165,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p class="lead mb-0">I grew up in Part-Au-Prince, Haiti, and while I love living in the USA, there is a lot  I miss about being home - especially the food! I love experimenting in the kitchen with different Haitian or Texan dishes and having friends over to eat together. 
-                        I'm a big fan of classic literature and am currently finsishing up the <i>Lord of The Rings</i> Trilogy by Tolkein and <b>slowly</b> making my way through <i>The Broters Karamazov</i> by Dostoevsky. 
+                    <p class="lead mb-0">I grew up in Port-Au-Prince, Haiti, and while I love living in the USA, there is a lot  I miss about being home - especially the food! I love experimenting in the kitchen with different Haitian or Texan dishes and having friends over to eat together. 
+                        I'm a big fan of classic literature and am currently finishing up the <i>Lord of The Rings</i> Trilogy by Tolkien and <b>slowly</b> making my way through <i>The Brothers Karamazov</i> by Dostoevsky. 
                         My preferred sports to play are basketball 🏀, soccer ⚽, and tennis 🎾.</p><br>
                     <p class="lead mb-0">I've always been fascinated with the intersection of data, innovation, and community development, so I spend a great deal of my free time exploring the latest advancements in data and tech and how they impact the cities and towns of the future.</p>
                 </div>
@@ -254,13 +254,13 @@
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
                             General Assembly Certified Data Scientist
                             <a href="assets/documents/Certificate-of-Completion-kevinrenois@gmail.com-1606331061.pdf" target="_blank">
                             Click here to view certificate</a>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
                             Harvard Business School Online - Credential of Readiness (CORe)
                             <a href="assets/documents/Course Verification Form_CORe Nov 27 2018.pdf" target="_blank">
                             Click here to view certificate</a>
