--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                         Texas, USA · (254) 733-8319 ·
                         <a href="mailto:kevinrenois@gmail.com">kevinrenois@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a data-driven problem solver with a background in non-profit economic development. 
-                        I am passionate about using innovative technologies to increase business effectiveness and make communities
-                        more connected and prosperous. I have experience in working with collaborative teams to take 
-                        projects and initiatives from ideation to execution and I have recently strengthened my skill-set with robust data science competencies.</p>
+                    <p class="lead mb-5">Data-driven problem solver with a background in entrepreneurship and economic development. Dedicated team member who is passionate 
+                        about using data to make smart decisions. I have experience in taking projects and initiatives from ideation to execution. 
+                        <br>
+                    </br>
+                        I live for impossible challenges.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/kevinrenois/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/kevinrenois"><i class="fab fa-github"></i></a>
