--- a/index.html
+++ b/index.html
@@ -125,17 +125,18 @@
                     
                             <img class="img-thumbnail" src="assets/img/charles-deluvio-PzysYNvUg0o-unsplash.jpg" align="top">
             
-                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                sunt in culpa qui officia deserunt mollit anim id est laborum. <br>To see this project, 
+                            <div class="mt-2">I created a SQL database of over 1 million known benign and malicious URLs and developed a web app that can take a URL 
+                                input from a user, automatically query the database to search for that URL, and tell the user whether it is safe or dangerous. 
+                                If the URL is not in the database the app will automatically pass the it through a classification model I built using Python to predict 
+                                the probability of the URL being malicious. The model was trained using Natural Language Processing and Logistic Regression and 
+                                had an accuracy score of 98%.<br>To see this project, 
                                 <a href="https://github.com/kevinrenois/Detecting-Malicious-URLS-using-Python-and-SQL" target="_blank"><strong>click here</strong></a>
                             </div><br>
                             <h3 class="mb-0">Mapping The Interaction of COVID-19 Cases and Wildfires Nationwide</h3><br>
 
                             <img class="img-thumbnail" src="assets/img/mika-baumeister-uz_T7h8ds04-unsplash.jpg" align="top">
 
-                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            <div class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
                                 dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
                                 sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
@@ -146,7 +147,7 @@
                             <h3 class="mb-0">Natural Language Processing Classification Model</h3><br>
 
                             <img class="img-thumbnail" src="assets/img/patrick-tomasso-Oaqk7qqNh_c-unsplash.jpg" align="top">
-                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            <div class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
                                 dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
                                 sunt in culpa qui officia deserunt mollit anim id est laborum.
