--- a/index.html
+++ b/index.html
@@ -129,30 +129,34 @@
                                 input from a user, automatically query the database to search for that URL, and tell the user whether it is safe or dangerous. 
                                 If the URL is not in the database the app will automatically pass the it through a classification model I built using Python to predict 
                                 the probability of the URL being malicious. The model was trained using Natural Language Processing and Logistic Regression and 
-                                had an accuracy score of 98%.<br>To see this project, 
+                                had an accuracy score of 98%.
+                                <br>
+                                To see view this project, 
                                 <a href="https://github.com/kevinrenois/Detecting-Malicious-URLS-using-Python-and-SQL" target="_blank"><strong>click here</strong></a>
                             </div><br>
                             <h3 class="mb-0">Mapping The Interaction of COVID-19 Cases and Wildfires Nationwide</h3><br>
 
                             <img class="img-thumbnail" src="assets/img/mika-baumeister-uz_T7h8ds04-unsplash.jpg" align="top">
 
-                            <div class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
-                                To see this project, 
+                            <div class="mt-2">For this project I worked collaboratively with a team of 3 to compile, analyze, and visualize data for both COVID-19 cases up 
+                                to 22 October, 2020 and fire anomalies (e.g. wildfires) in 2020 up to the same date. We created a web app that displayed an interactive map showing 
+                                a map of daily reports of confirmed COVID cases layered over heat maps of fire anomalies in the continental United States. We concluded that there 
+                                was a possible positive relationship between the occurrence fire anomalies and confirmed COVID cases. We speculated that this could be caused by poor protective 
+                                measures during evacuations.
+                                <br>
+                                To see view this project, 
                                 <a href="https://github.com/kevinrenois/COVID19-Natural-Disasters" target="_blank"><strong>click here</strong></a>
                             </div><br>
                             
                             <h3 class="mb-0">Natural Language Processing Classification Model</h3><br>
 
                             <img class="img-thumbnail" src="assets/img/patrick-tomasso-Oaqk7qqNh_c-unsplash.jpg" align="top">
-                            <div class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            <div class="mt-2">Using Push Shift API, I created a function that pulled a total of 10,000 comments from two subreddit pages and combined them into one dataset. 
+                                Then, using Natural Language Processing and Python, I created a model that could accurately predict whether text would come from one subreddit page or the other.
+                                I designed the model to analyze language coming from both pages and train itself to learn how to distinguish whether any given language was more fit for one source or the other.
+                                The model performed well, returning an accuracy score of about 84%.
                                 <br>
-                                To see this project, 
+                                To see view this project, 
                                 <a href="https://github.com/kevinrenois/Subreddit-Classification" target="_blank"><strong>click here</strong></a>
                             </div>
                             <br>
